--- a/POO_703/POO_703.csproj
+++ b/POO_703/POO_703.csproj
@@ -43,10 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\BaseModels.cs" />
     <Compile Include="Models\Clients.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ClientService.cs" />
+    <Compile Include="Services\UserSevice.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
